// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DistributeTokensStep should render the component with active button 1`] = `
<div
  className="steps-content container"
>
  <div
    className="about-step"
  >
    <div
      className="swal2-icon swal2-info warning-logo"
    >
      !
    </div>
    <p
      className="title"
    >
      Distribute reserved tokens
    </p>
    <p
      className="description"
    >
      Reserved tokens distribution is the last step of the crowdsale before finalization. You can make it after the end of the last tier or if hard cap is reached. If you reserved more then 100 addresses for your crowdsale, the distribution will be executed in batches with 100 reserved addresses per batch. Amount of batches is equal to amount of transactions
    </p>
    <a
      href="/#"
      onClick={[Function]}
    >
      <span
        className="button button_fill"
      >
        Distribute reserved tokens
      </span>
    </a>
    <div
      className="reserved-tokens read-only"
    >
      <div
        className="reserved-tokens-item-container-inner"
      >
        <span
          className="reserved-tokens-item reserved-tokens-item-left"
        >
          <strong>
            Address
          </strong>
        </span>
        <span
          className="reserved-tokens-item reserved-tokens-item-middle"
        >
          <strong>
            Dimension
          </strong>
        </span>
        <span
          className="reserved-tokens-item reserved-tokens-item-right"
        >
          <strong>
            Value
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DistributeTokensStep should render the component with disabled button 1`] = `
<div
  className="steps-content container"
>
  <div
    className="about-step"
  >
    <div
      className="swal2-icon swal2-info warning-logo"
    >
      !
    </div>
    <p
      className="title"
    >
      Distribute reserved tokens
    </p>
    <p
      className="description"
    >
      Reserved tokens distribution is the last step of the crowdsale before finalization. You can make it after the end of the last tier or if hard cap is reached. If you reserved more then 100 addresses for your crowdsale, the distribution will be executed in batches with 100 reserved addresses per batch. Amount of batches is equal to amount of transactions
    </p>
    <a
      href="/#"
      onClick={[Function]}
    >
      <span
        className="button button_disabled"
      >
        Distribute reserved tokens
      </span>
    </a>
    <div
      className="reserved-tokens read-only"
    >
      <div
        className="reserved-tokens-item-container-inner"
      >
        <span
          className="reserved-tokens-item reserved-tokens-item-left"
        >
          <strong>
            Address
          </strong>
        </span>
        <span
          className="reserved-tokens-item reserved-tokens-item-middle"
        >
          <strong>
            Dimension
          </strong>
        </span>
        <span
          className="reserved-tokens-item reserved-tokens-item-right"
        >
          <strong>
            Value
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;
